# IP-Adapter

./: README.md  ip_adapter_t2i-adapter_demo.ipynb  ip_adapter_t2i_demo.ipynb  pyproject.toml  tutorial_train.py  tutorial_train_faceid.py  tutorial_train_plus.py  tutorial_train_sdxl.py  visual_attnmap.ipynb  visualization_attnmap_faceid.ipynb  visualization_attnmap_sdxl_plus-face.ipynb
ip_adapter/: __init__.py  attention_processor.py  attention_processor_faceid.py  custom_pipelines.py  ip_adapter.py  ip_adapter_faceid.py  ip_adapter_faceid_separate.py  resampler.py  sd3_attention_processor.py  test_resampler.py  utils.py
